--- a/index.html
+++ b/index.html
@@ -1336,20 +1336,18 @@
     <section id="home" class="section min-h-screen flex flex-col items-center justify-center relative">
         <div class="container mx-auto px-4 text-center z-10">
             <!-- Profile Image -->
-            <div class="profile-image-container mb-8">
-                <!-- Placeholder image with gradient background -->
-                <div style="background: linear-gradient(45deg, var(--purple), var(--pink), var(--aqua)); width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
-                    <i class="fas fa-user text-8xl text-white opacity-70"></i>
-                </div>
-            </div>
-            
-            <h1 class="text-5xl md:text-7xl font-bold mb-4 gradient-text glitch" data-text="George Alfred Nyamema">George Alfred Nyamema</h1>
-            <div class="text-xl md:text-2xl mb-6 text-white"><span id="typed-strings"></span><span id="typed" aria-live="polite"></span></div>
-            <p class="max-w-3xl mx-auto text-white mb-8">Delivering innovative solutions at the intersection of AI, management, accounting, and cutting-edge technology.</p>
-            <div class="flex flex-wrap justify-center gap-4">
-                <a href="#about" class="btn" aria-label="Learn more about George Nyamema">Learn More</a>
-                <a href="#contact" class="btn" aria-label="Contact George Nyamema">Get In Touch</a>
-            </div>
+         <div class="profile-image-container mb-8">
+  <img src="main.jpg" alt="A professional portrait of George Alfred Nyamema" class="profile-image" loading="lazy" width="300" height="300" />
+</div>
+<h1 class="text-5xl md:text-7xl font-bold mb-4 gradient-text glitch" data-text="George Alfred Nyamema">George Alfred Nyamema</h1>
+<div class="text-xl md:text-2xl mb-6 text-white">
+  <span id="typed-strings"></span><span id="typed" aria-live="polite"></span>
+</div>
+<p class="max-w-3xl mx-auto text-white mb-8">Delivering innovative solutions at the intersection of AI, management, accounting, and cutting-edge technology.</p>
+<div class="flex flex-wrap justify-center gap-4">
+  <a href="#about" class="btn" aria-label="Learn more about George Nyamema">Learn More</a>
+  <a href="#contact" class="btn" aria-label="Contact George Nyamema">Get In Touch</a>
+</div>
             
             <!-- Tech badges -->
             <div class="mt-12 flex justify-center">
